@@ -980,144 +980,6 @@ public class ExecutionGraph implements ExecutionListener {
 	}
 
 	/**
-	 * Creates an exact (deep) copy of this execution graph.
-	 * 
-	 * @return an exact (deep) copy of this execution graph
-	 */
-	/*
-	 * public ExecutionGraph duplicateExecutionGraph() {
-	 * //First we copy the easy data structures
-	 * final ExecutionGraph duplicateGraph = new ExecutionGraph(this.jobID);
-	 * duplicateGraph.nextStageToExecute = this.nextStageToExecute;
-	 * //Copy execution stages
-	 * final Map<ExecutionGroupVertex, ExecutionGroupVertex> groupVertexMap = new HashMap<ExecutionGroupVertex,
-	 * ExecutionGroupVertex>();
-	 * final Map<ExecutionVertex, ExecutionVertex> executionVertexMap = new HashMap<ExecutionVertex, ExecutionVertex>();
-	 * for(int i = 0; i < this.stages.size(); i++) {
-	 * final ExecutionStage sourceStage = this.stages.get(i);
-	 * final ExecutionStage duplicateStage = new ExecutionStage(sourceStage.getStageNumber());
-	 * for(int j = 0; j < sourceStage.getNumberOfStageMembers(); j++) {
-	 * final ExecutionGroupVertex sourceGroupVertex = sourceStage.getStageMember(j);
-	 * final ExecutionGroupVertex duplicateGroupVertex = new ExecutionGroupVertex(sourceGroupVertex.getName(),
-	 * duplicateGraph,
-	 * sourceGroupVertex.getUserDefinedNumberOfMembers(),
-	 * sourceGroupVertex.getInstanceType(),
-	 * sourceGroupVertex.isInstanceTypeUserDefined(),
-	 * sourceGroupVertex.getNumberOfSubtasksPerInstance(),
-	 * sourceGroupVertex.isVertexToShareInstanceWithUserDefined(),
-	 * sourceGroupVertex.getConfiguration());
-	 * duplicateGroupVertex.setMinMemberSize(sourceGroupVertex.getMinimumNumberOfGroupMember());
-	 * duplicateGroupVertex.setMaxMemberSize(sourceGroupVertex.getMaximumNumberOfGroupMembers());
-	 * duplicateGroupVertex.setExecutionStage(duplicateStage);
-	 * duplicateGroupVertex.setInputSplits(sourceGroupVertex.getInputSplits());
-	 * groupVertexMap.put(sourceGroupVertex, duplicateGroupVertex);
-	 * for(int k = 0; k < sourceGroupVertex.getCurrentNumberOfGroupMembers(); k++) {
-	 * final ExecutionVertex sourceExecutionVertex = sourceGroupVertex.getGroupMember(k);
-	 * final ExecutionVertex duplicatedExecutionVertex = sourceExecutionVertex.duplicateVertex(true, false,
-	 * duplicateGroupVertex);
-	 * executionVertexMap.put(sourceExecutionVertex, duplicatedExecutionVertex);
-	 * }
-	 * duplicateStage.addStageMember(duplicateGroupVertex);
-	 * }
-	 * duplicateGraph.stages.add(duplicateStage);
-	 * }
-	 * //Recreate link structure between group vertices
-	 * final ExecutionGroupVertexIterator groupVertexIterator = new ExecutionGroupVertexIterator(this, true, -1);
-	 * while(groupVertexIterator.hasNext()) {
-	 * final ExecutionGroupVertex sourceGroupVertex = groupVertexIterator.next();
-	 * final ExecutionGroupVertex duplicateGroupVertex = groupVertexMap.get(sourceGroupVertex);
-	 * for(int i = 0; i < sourceGroupVertex.getNumberOfForwardLinks(); i++) {
-	 * final ExecutionGroupEdge edge = sourceGroupVertex.getForwardEdge(i);
-	 * final ExecutionGroupVertex sourceTargetGroupVertex = edge.getTargetVertex();
-	 * final ExecutionGroupVertex duplicateTargetGroupVertex = groupVertexMap.get(sourceTargetGroupVertex);
-	 * duplicateGroupVertex.wireTo(duplicateTargetGroupVertex, edge.getChannelType(), edge.isChannelTypeUserDefined(),
-	 * edge.getCompressionLevel(), edge.isCompressionLevelUserDefined());
-	 * }
-	 * }
-	 * //TODO: Copy vertices to share instances with
-	 * //TODO: Add deep copy of job configuration
-	 * //Copy input and output vertices
-	 * for(int i = 0; i < this.inputVertices.size(); i++) {
-	 * duplicateGraph.inputVertices.add(executionVertexMap.get(this.inputVertices.get(i)));
-	 * }
-	 * for(int i = 0; i < this.outputVertices.size(); i++) {
-	 * duplicateGraph.outputVertices.add(executionVertexMap.get(this.outputVertices.get(i)));
-	 * }
-	 * //Copy instanceMap
-	 * final Iterator<InstanceID> instanceIterator = this.instanceMap.keySet().iterator();
-	 * while(instanceIterator.hasNext()) {
-	 * final InstanceID instanceID = instanceIterator.next();
-	 * duplicateGraph.instanceMap.put(instanceID, this.instanceMap.get(instanceID));
-	 * }
-	 * //Now this is the messy part: Recreating the channels and their relationships
-	 * final ExecutionGraphIterator graphIterator = new ExecutionGraphIterator(this, true);
-	 * final Map<InputChannel<? extends Record>, InputChannel<? extends Record>> inputChannelMap = new
-	 * HashMap<InputChannel<? extends Record>, InputChannel<? extends Record>>();
-	 * final Map<OutputChannel<? extends Record>, OutputChannel<? extends Record>> outputChannelMap = new
-	 * HashMap<OutputChannel<? extends Record>, OutputChannel<? extends Record>>();
-	 * //Duplicate all the channels from the original graph
-	 * while(graphIterator.hasNext()) {
-	 * final ExecutionVertex sourceVertex = graphIterator.next();
-	 * final ExecutionVertex duplicatedVertex = executionVertexMap.get(sourceVertex);
-	 * for(int i = 0; i < sourceVertex.getEnvironment().getNumberOfInputGates(); i++) {
-	 * final InputGate<? extends Record> sourceInputGate = sourceVertex.getEnvironment().getInputGate(i);
-	 * final InputGate<? extends Record> duplicatedInputGate = duplicatedVertex.getEnvironment().getInputGate(i);
-	 * for(int j = 0; j < sourceInputGate.getNumberOfInputChannels(); j++) {
-	 * final InputChannel<? extends Record> sourceInputChannel = sourceInputGate.getInputChannel(j);
-	 * InputChannel<? extends Record> duplicatedInputChannel = null;
-	 * if(sourceInputChannel.getType() == ChannelType.FILE) {
-	 * duplicatedInputChannel = duplicatedInputGate.createFileInputChannel(sourceInputChannel.getID(),
-	 * sourceInputChannel.getCompressionLevel());
-	 * } else if(sourceInputChannel.getType() == ChannelType.NETWORK) {
-	 * duplicatedInputChannel = duplicatedInputGate.createNetworkInputChannel(sourceInputChannel.getID(),
-	 * sourceInputChannel.getCompressionLevel());
-	 * } else if(sourceInputChannel.getType() == ChannelType.INMEMORY) {
-	 * duplicatedInputChannel = duplicatedInputGate.createInMemoryInputChannel(sourceInputChannel.getID(),
-	 * sourceInputChannel.getCompressionLevel());
-	 * }
-	 * inputChannelMap.put(sourceInputChannel, duplicatedInputChannel);
-	 * duplicateGraph.inputChannelMap.put(duplicatedInputChannel.getID(), duplicatedInputChannel);
-	 * duplicateGraph.channelToVertexMap.put(duplicatedInputChannel.getID(), duplicatedVertex);
-	 * }
-	 * }
-	 * for(int i = 0; i < sourceVertex.getEnvironment().getNumberOfOutputGates(); i++) {
-	 * final OutputGate<? extends Record> sourceOutputGate = sourceVertex.getEnvironment().getOutputGate(i);
-	 * final OutputGate<? extends Record> duplicatedOutputGate = duplicatedVertex.getEnvironment().getOutputGate(i);
-	 * for(int j = 0; j < sourceOutputGate.getNumberOfOutputChannels(); j++) {
-	 * final OutputChannel<? extends Record> sourceOutputChannel = sourceOutputGate.getOutputChannel(j);
-	 * OutputChannel<? extends Record> duplicatedOutputChannel = null;
-	 * if(sourceOutputChannel.getType() == ChannelType.FILE) {
-	 * duplicatedOutputChannel = duplicatedOutputGate.createFileOutputChannel(sourceOutputChannel.getID(),
-	 * sourceOutputChannel.getCompressionLevel());
-	 * } else if(sourceOutputChannel.getType() == ChannelType.NETWORK) {
-	 * duplicatedOutputChannel = duplicatedOutputGate.createNetworkOutputChannel(sourceOutputChannel.getID(),
-	 * sourceOutputChannel.getCompressionLevel());
-	 * } else if(sourceOutputChannel.getType() == ChannelType.INMEMORY) {
-	 * duplicatedOutputChannel = duplicatedOutputGate.createInMemoryOutputChannel(sourceOutputChannel.getID(),
-	 * sourceOutputChannel.getCompressionLevel());
-	 * }
-	 * outputChannelMap.put(sourceOutputChannel, duplicatedOutputChannel);
-	 * duplicateGraph.outputChannelMap.put(duplicatedOutputChannel.getID(), duplicatedOutputChannel);
-	 * duplicateGraph.channelToVertexMap.put(duplicatedOutputChannel.getID(), duplicatedVertex);
-	 * }
-	 * }
-	 * }
-	 * //Now, finally connect all the channels
-	 * final Iterator<InputChannel<? extends Record>> channelIterator = inputChannelMap.keySet().iterator();
-	 * while(channelIterator.hasNext()) {
-	 * final InputChannel<? extends Record> sourceInputChannel = channelIterator.next();
-	 * final ChannelID sourceOutputChannelID = sourceInputChannel.getOutputChannelID();
-	 * final OutputChannel<? extends Record> sourceOutputChannel = this.outputChannelMap.get(sourceOutputChannelID);
-	 * final InputChannel<? extends Record> duplicatedInputChannel = inputChannelMap.get(sourceInputChannel);
-	 * final OutputChannel<? extends Record> duplicatedOutputChannel = outputChannelMap.get(sourceOutputChannel);
-	 * duplicatedInputChannel.setOutputChannelID(duplicatedOutputChannel.getID());
-	 * duplicatedOutputChannel.setInputChannelID(duplicatedInputChannel.getID());
-	 * }
-	 * return duplicateGraph;
-	 * }
-	 */
-
-	/**
 	 * Returns the index of the current execution stage.
 	 * 
 	 * @return the index of the current execution stage
@@ -1126,6 +988,11 @@ public class ExecutionGraph implements ExecutionListener {
 		return this.indexToCurrentExecutionStage;
 	}
 
+	/**
+	 * Returns the stage which is currently executed.
+	 * 
+	 * @return the currently executed stage or <code>null</code> if the job execution is already completed
+	 */
 	public ExecutionStage getCurrentExecutionStage() {
 
 		if (this.indexToCurrentExecutionStage >= this.stages.size()) {
@@ -1136,23 +1003,45 @@ public class ExecutionGraph implements ExecutionListener {
 	}
 
 	/**
-	 * Returns the types and numbers of instances which are required for the
-	 * current execution stage to complete.
+	 * Checks which instance types and how many instances of these types are required to execute the current stage
+	 * of this job graph. The required instance types and the number of instances are collected in the given map. Note
+	 * that this method does not clear the map before collecting the instances.
 	 * 
-	 * @return a map containing the types and respective numbers of instances required
-	 *         for the current execution stage to complete.
+	 * @param instanceTypeMap
+	 *        the map containing the instances types and the required number of instances of the respective type
+	 * @param executionState
+	 *        the execution state the considered vertices must be in
 	 */
-	public Map<InstanceType, Integer> getInstanceTypesRequiredForCurrentStage() {
+	public void collectInstanceTypesRequiredForCurrentStage(final Map<InstanceType, Integer> instanceTypeMap,
+			final ExecutionState executionState) {
 
-		final Map<InstanceType, Integer> instanceTypeMap = new HashMap<InstanceType, Integer>();
+		collectInstanceTypesRequiredForStage(this.indexToCurrentExecutionStage, instanceTypeMap, executionState);
+	}
 
-		if (this.indexToCurrentExecutionStage >= this.stages.size()) {
-			return instanceTypeMap;
+	/**
+	 * Checks which instance types and how many instances of these types are required to execute the given stage
+	 * of this job graph. The required instance types and the number of instances are collected in the given map. Note
+	 * that this method does not clear the map before collecting the instances.
+	 * 
+	 * @param stage
+	 *        the stage in which the required instance types are collected.
+	 * @param instanceTypeMap
+	 *        the map containing the instances types and the required number of instances of the respective type
+	 * @param executionState
+	 *        the execution state the considered vertices must be in
+	 */
+	public void collectInstanceTypesRequiredForStage(final int stage, final Map<InstanceType, Integer> instanceTypeMap,
+			final ExecutionState executionState) {
+
+		if (stage >= this.stages.size()) {
+			LOG.error("Illegal stage  " + stage + " requested");
+			return;
 		}
 
 		final ExecutionStage nextStage = this.stages.get(this.indexToCurrentExecutionStage);
 		if (nextStage == null) {
-			LOG.warn("Stage " + this.indexToCurrentExecutionStage + " is not a valid execution stage");
+			LOG.error("Stage " + stage + " is not a valid execution stage");
+			return;
 		}
 
 		final Set<AbstractInstance> collectedInstances = new HashSet<AbstractInstance>();
@@ -1163,7 +1052,7 @@ public class ExecutionGraph implements ExecutionListener {
 			for (int j = 0; j < groupVertex.getCurrentNumberOfGroupMembers(); j++) {
 				// Get the instance type from the execution vertex if it
 				final ExecutionVertex vertex = groupVertex.getGroupMember(j);
-				if (vertex.getExecutionState() == ExecutionState.SCHEDULED) {
+				if (vertex.getExecutionState() == executionState) {
 					final AbstractInstance instance = vertex.getAllocatedResource().getInstance();
 
 					if (collectedInstances.contains(instance)) {
@@ -1174,7 +1063,7 @@ public class ExecutionGraph implements ExecutionListener {
 
 					if (instance instanceof DummyInstance) {
 						Integer num = instanceTypeMap.get(instance.getType());
-						num = (num == null) ? new Integer(1) : new Integer(num.intValue() + 1);
+						num = (num == null) ? Integer.valueOf(1) : Integer.valueOf(num.intValue() + 1);
 						instanceTypeMap.put(instance.getType(), num);
 					} else {
 						LOG.debug("Execution Vertex " + vertex.getName() + " (" + vertex.getID()
@@ -1183,8 +1072,6 @@ public class ExecutionGraph implements ExecutionListener {
 				}
 			}
 		}
-
-		return instanceTypeMap;
 	}
 
 	public void repairStages() {
